# wsgi_asgi

./: README.md
asgi/: pyproject.toml
asgi/src/: application.py  server.py
asgi/tests/: test_server.py
wsgi/: README.md  runserver_with_middleware.py  runserver_without_middleware.py  wsgi_middleware_example.md  wsgi_server_and_app_explained.md  wsgi_variables_explained.md
wsgi/pep_example/middlewares/: latin.py
wsgi/pep_example/with_middleware/: app_base.py  app_base_class.py
wsgi/pep_example/without_middleware/: app_base.py
wsgi/wsgiref_used/: runner.py
wsgi1/: app_base.py  app_base_class.py  pep333_3333.md  runner.py  server.py  wsgi_basic_request.md  wsgi_basic_response.md
wsgi1/multi_middlewares/: run.py
wsgi1/pep_example/: app_base.py  app_base_class.py  middlewares.py  piglatin.py  server.py
wsgi1/pep_example/without_middleware/: app_base_class.py
wsgi1/wsgiref_used/: runner.py
