[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.poetry]
name = "asgi-explained"
version = "0.1.0"
description = ""
authors = ["s3ich4n <s3ich4n@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
aiohttp = "^3.11.12"
pytest-asyncio = "^0.25.3"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
